--- a/grafana/grafana-values.yaml
+++ b/grafana/grafana-values.yaml
@@ -59,3 +59,18 @@ alloy:
         url = "http://prometheus-server/api/v1/write"
       }
     }
+
+    loki.write "default" {
+      endpoint {
+        url = "http://loki:3100/loki/api/v1/push"
+      }
+    }
+
+    discovery.kubernetes "pods" {
+      role = "pod"
+    }
+
+    loki.source.kubernetes "pods" {
+      targets    = discovery.kubernetes.pods.targets
+      forward_to = [loki.write.default.receiver]
+    }
